# keys-hackathon

./: .markdownlint.yaml  LICENSE  README.md  cspell.json  cspell_dictionary.txt
Microsoft Developers AI Learning Hackathon/: README.md  pyproject.toml
Microsoft Developers AI Learning Hackathon/docs/: azure_cosmos_db_developer_cloud_skills_challenge_part_1.md  azure_cosmos_db_developer_cloud_skills_challenge_part_2.md
Microsoft Developers AI Learning Hackathon/src/: custom_copilot.py  test_openapi.py
The PartyRock Generative AI Hackathon by AWS/: README.md
The PartyRock Generative AI Hackathon by AWS/docs/: jarvis_prompts.md  report.md
