[tool.poetry]
name = "microsoft developers ai learning hackathon"
version = "0.1.0"
description = "Microsoft Developers AI Learning Hackathon"
authors = ["Keys (Shangar) <shangar202000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.25.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
